--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,22 +18,22 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - uses: actions/checkout@v6.0.1
         with:
           # Allow goreleaser to access older tag information.
           fetch-depth: 0
-      - uses: actions/setup-go@f111f353c4d7c0378cd091f671d42767e28d337d # v5.3.0
+      - uses: actions/setup-go@v6.1.0
         with:
           go-version-file: "go.mod"
           cache: true
       - name: Import GPG key
-        uses: crazy-max/ghaction-import-gpg@e89d40939c28e39f97cf32126055eeae86ba74ec # v6.3.0
+        uses: crazy-max/ghaction-import-gpg@v6.3.0
         id: import_gpg
         with:
           gpg_private_key: ${{ secrets.ET_SIGNING_KEY }}
           passphrase: ${{ secrets.ET_SIGNING_KEY_PASSPHRASE }}
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@e435ccd777264be153ace6237001ef4d979d3a7a # v6.4.0
+        uses: goreleaser/goreleaser-action@v6.4.0
         with:
           distribution: goreleaser
           version: "~> v2"
@@ -46,4 +46,3 @@ jobs:
           ARTIFACTORY_ASUUTO_URL: ${{ secrets.ET_ARTIFACTORY_URL }}
           ARTIFACTORY_ASUUTO_USERNAME: ${{ secrets.ET_ARTIFACTORY_USERNAME }}
           ARTIFACTORY_ASUUTO_PASSWORD: ${{ secrets.ET_ARTIFACTORY_TOKEN }}
-
