--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
         with:
           # Allow goreleaser to access older tag information.
           fetch-depth: 0
-      - uses: actions/setup-go@f111f353c4d7c0378cd091f671d42767e28d337d # v5.3.0
+      - uses: actions/setup-go@v5
         with:
           go-version-file: "go.mod"
           cache: true
